--- a/style.css
+++ b/style.css
@@ -8,3 +8,11 @@ button {
     height: 120px;
     align-items: center;
 }
+.yellow {
+    background-color: yellow;
+    color: black;
+}
+.red {
+    background-color: red;
+    color:black;
+}
