--- a/0.1functions-rock-papper-scissor.css
+++ b/0.1functions-rock-papper-scissor.css
@@ -36,3 +36,11 @@
           padding:10px 15px;
           cursor: pointer;
         }
+        .auto-btn{
+          background-color: white;
+          border: none;
+          font-size: 15px;
+          padding:10px 15px;
+          cursor: pointer;
+          margin-left: 10px;
+        }
